# pix

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  go.mod  svg2pix
cmd/svg2pix/: main.go
doxygen/: Doxyfile  custom.css  header.html
examples/fbtiger/: CMakeLists.txt  main.c
examples/sdldemo/: CMakeLists.txt  demo.c
examples/sdlicons/: CMakeLists.txt  icons.c
examples/sdlimage/: CMakeLists.txt  main.c
examples/sdltiger/: CMakeLists.txt  canvas.c  canvas.h  main.c
examples/tiger/: CMakeLists.txt  canvas.c  main.c  tiger.c  tiger.h
include/pix/: fb.h  frame.h  image.h  pix.h  sdl.h
include/pix/sdl/: frame_sdl.h  sdl_app.h
include/pix/vg/: canvas.h  fill.h  path.h  primitives.h  shape.h  transform.h  vg.h
include/pixsdl/: app.h  frame.h  pixsdl.h
include/vg/: canvas.h  fill.h  font.h  path.h  primitives.h  shape.h  transform.h  vg.h
src/: CMakeLists.txt
src/icons/: CMakeLists.txt
src/pix/: color_internal.h  fb.c  frame.c  frame_internal.h  grey8.c  image_jpeg.c  jpeg.c  pix.h  rgb24.c  rgb565.c  rgba32.c  sdl.c
src/pixsdl/: app.c  frame.c
src/sdl/: frame_sdl.c  sdl_app.c
src/vg/: canvas.c  fill.c  fill_internal.h  font.c  path.c  path_internal.h  primitives.c  shape.c  shape_internal.h  transform.c
